--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@
     box-sizing: border-box;
 }
 p{    
-    font-size: 1.5rem; 
-    font-weight: bold;   
+    font-size: 1.58rem; 
+    font-weight: 500;   
 }
 .responsive {
     max-width: 100%;
@@ -18,19 +18,19 @@ body{
     padding: 0px 70px;       
 }
 h1{
-    font-size: 4.25rem;
+    font-size: 4.35rem;
     font-weight: lighter;
     padding: 0px;
     margin: 0px;           
 }
 h2{
-    font-size: 2rem;
-    font-weight: 600;
+    font-size: 2.1rem;
+    font-weight: 500;
     padding-bottom: 16px;
     padding-top: 0px;
 }
 img{
-    margin-top: 60px;
+    margin-top: 40px;
 }
 #header{
     padding-bottom: 50px;
@@ -46,33 +46,35 @@ img{
     align-items: center;
     flex-wrap: wrap;          
     border-bottom: 2px solid #eaeaea;
-    padding: 20px 80px 70px 80px;       
+    padding: 14px 80px 70px 50px;       
 }
 .paybox:last-child{
     border: none;
 }
 #stripe_button{
+    font-family: HelveticaNeue Medium;
     margin-top: 40px;
     align-content: center;
-    font-size: 20px;               
-    font-weight: 600;       
+    font-size: 1.2rem;               
+    font-weight: lighter;       
     width: 130px;
     height: 70px;
     background-color: #000;
     color: #fff;
-    border-radius: 0.5rem;
+    border-radius: 0.6rem;
     border: none;       
 }
 #paypal_button{
+    font-family: HelveticaNeue Medium;
     margin-top: 40px;
     align-content: center;
-    font-size: 20px;
-    font-weight: 600;
+    font-size: 1.2rem;
+    font-weight: lighter;
     width: 130px;
     height: 70px;
     color: #000;
     background-color: #fff;
-    border-radius: 0.5rem;
+    border-radius: 0.6rem;
     border: none;    
 }
 @media screen and (max-width: 400px) {
